--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Internet Connection using</title>
-    <link rel="stylesheet" href="Check Internet Connection.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div id="container">
@@ -23,6 +23,6 @@
 
 
 
-    <script src="Check Internet Connection.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
